Separated RawkHD / Riivolution builds to separate Makefiles. Lowered memory usage for Tempus
git-svn-id: svn://japaneatahand.com/rawksd/branches/whee@16 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/stripios/Makefile
+++ b/stripios/Makefile
@@ -1,5 +1,5 @@
 stripios.exe:main.cpp
-	g++ main.cpp -o stripios.exe
+	g++ main.cpp -o stripios
 clean:
 	@echo "clean ..."
-	@rm -f stripios.exe
+	@rm -f stripios
