--- a/launcher/Makefile.rawk
+++ b/launcher/Makefile.rawk
@@ -15,8 +15,8 @@ include $(DEVKITPPC)/wii_rules
 # SOURCES is a list of directories containing source code
 # INCLUDES is a list of directories containing extra header files
 #---------------------------------------------------------------------------------
-TARGET		:=	launcher
-BUILD		:=	build
+TARGET		:=	launcher.rawk
+BUILD		:=	build.rawk
 SOURCES		:=	source source/libwiigui source/images source/fonts source/sounds source/pngu ../libtranslatios/source ../libmload/source build patchmii
 DATA		:=	data 
 INCLUDES	:=	source ../libtranslatios/include ../libmload/include ../libfile/include ../libxml++ ../libxml++/libxml++ ../libxml2/include patchmii
@@ -25,10 +25,10 @@ INCLUDES	:=	source ../libtranslatios/include ../libmload/include ../libfile/incl
 # options for code generation
 #---------------------------------------------------------------------------------
 
-CFLAGS		=	-g -O2 -Wall $(MACHDEP) $(INCLUDE) -fdata-sections -ffunction-sections -Wl,--gc-sections
+CFLAGS		=	-g -O2 -Wall $(MACHDEP) $(INCLUDE) -fdata-sections -ffunction-sections -Wl,--gc-sections -DRAWKHAXX
 CXXFLAGS	=	-save-temps -Xassembler -aln=$@.lst $(CFLAGS)
-LDFLAGS		=	-g $(MACHDEP) -Wl,-Map,$(notdir $@).map,--section-start,.init=0x80900100
-#LDFLAGS		=	-g $(MACHDEP) -Wl,-Map,$(notdir $@).map,--section-start,.init=0x80A00000
+#LDFLAGS		=	-g $(MACHDEP) -Wl,-Map,$(notdir $@).map,--section-start,.init=0x80900100
+LDFLAGS		=	-g $(MACHDEP) -Wl,-Map,$(notdir $@).map,--section-start,.init=0x80A00000
 
 #---------------------------------------------------------------------------------
 # any extra libraries we wish to link with the project
@@ -99,7 +99,7 @@ export OUTPUT	:=	$(CURDIR)/$(TARGET)
 #---------------------------------------------------------------------------------
 $(BUILD):
 	@[ -d $@ ] || mkdir -p $@
-	@make --no-print-directory -C $(BUILD) -f $(CURDIR)/Makefile
+	@make --no-print-directory -C $(BUILD) -f $(CURDIR)/Makefile.rawk
 
 #---------------------------------------------------------------------------------
 clean:
