Don't use _sprintf if we can help it
git-svn-id: svn://japaneatahand.com/rawksd/trunk@26 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/filemodule/Makefile
+++ b/filemodule/Makefile
@@ -46,6 +46,7 @@ export ROOT	:= $(CURDIR)
 
 all:
 	@[ -d $(BUILD) ] || mkdir -p $(BUILD)
+	@$(MAKE) -C ../libios --no-print-directory -f Makefile
 	@$(MAKE) -C libfile --no-print-directory -f Makefile.ios
 	@$(MAKE) -C libfile --no-print-directory -f Makefile.wii
 	@$(MAKE) -C libfat --no-print-directory -f Makefile
