whee branch updated - Zero4 release filemodule cleaned filemodule multiple filesystem support - network riifs dipmodule cleaned and added new launcher written
git-svn-id: svn://japaneatahand.com/rawksd/branches/whee@31 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/launcher/Makefile
+++ b/launcher/Makefile
@@ -1,10 +1,14 @@
 all:
 	@make -f Makefile.rawk
 	@make -f Makefile.rii
+	@make -f Makefile.zero4
 rawk:
 	@make -f Makefile.rawk
 rii:
 	@make -f Makefile.rii
+zero4:
+	@make -f Makefile.zero4	
 clean:
 	@make -f Makefile.rawk clean
 	@make -f Makefile.rii clean
+	@make -f Makefile.zero4 clean
