Launcher video mode fixes Added an installer with downgrading Fixed <memory /> patches
git-svn-id: svn://japaneatahand.com/rawksd/trunk@35 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/launcher/Makefile
+++ b/launcher/Makefile
@@ -33,7 +33,7 @@ LDFLAGS		=	-g $(MACHDEP) -Wl,-Map,$(notdir $@).map,--section-start,.init=0x80A00
 #---------------------------------------------------------------------------------
 # any extra libraries we wish to link with the project
 #---------------------------------------------------------------------------------
-LIBS :=	-lpng -lz -lfat -lwiiuse -lbte -lasnd -logc -ltremor -lfreetype -lxml++ -lxml2 -lfile_wii
+LIBS :=	-lxml++ -lxml2 -lpng -lz -lfat -lwiiuse -lbte -lasnd -logc -ltremor -lfreetype -lfile_wii
 #---------------------------------------------------------------------------------
 # list of directories containing libraries, this must be the top level containing
 # include and lib
