Make stuff build betterer
git-svn-id: svn://japaneatahand.com/rawksd/trunk@38 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/launcher/lib/tremor/Makefile
+++ b/launcher/lib/tremor/Makefile
@@ -9,17 +9,17 @@ endif
 
 include $(DEVKITPPC)/wii_rules
 
-
+#not needed, should be defined in wii_rules
 #---------------------------------------------------------------------------------
-PREFIX	:=	powerpc-gekko
+#PREFIX	:=	powerpc-eabi
 #---------------------------------------------------------------------------------
 
-CC		:=	$(PREFIX)-gcc
-CXX		:=	$(PREFIX)-g++
-AS		:=	$(PREFIX)-as
-AR		:=	$(PREFIX)-ar
-LD		:=	$(PREFIX)-ld
-OBJCOPY		:=	$(PREFIX)-objcopy
+#CC		:=	$(PREFIX)-gcc
+#CXX		:=	$(PREFIX)-g++
+#AS		:=	$(PREFIX)-as
+#AR		:=	$(PREFIX)-ar
+#LD		:=	$(PREFIX)-ld
+#OBJCOPY		:=	$(PREFIX)-objcopy
 
 BUILD		:=	build
 
