Memory patch improvements Mount improvements
git-svn-id: svn://japaneatahand.com/rawksd/trunk@50 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/launcher/Makefile
+++ b/launcher/Makefile
@@ -110,6 +110,9 @@ clean:
 run: $(BUILD)
 	wiiload $(OUTPUT).dol
 
+z: $(BUILD)
+	./dollz3/dollz3 $(OUTPUT).dol $(OUTPUT).z.dol -m
+
 #---------------------------------------------------------------------------------
 reload:
 	wiiload -r $(OUTPUT).dol
