FAT and network stability fixes
git-svn-id: svn://japaneatahand.com/rawksd/trunk@51 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/launcher/Makefile
+++ b/launcher/Makefile
@@ -111,7 +111,7 @@ run: $(BUILD)
 	wiiload $(OUTPUT).dol
 
 z: $(BUILD)
-	./dollz3/dollz3 $(OUTPUT).dol $(OUTPUT).z.dol -m
+	./dollz3/dollz3 $(OUTPUT).dol $(OUTPUT).z.dol
 
 #---------------------------------------------------------------------------------
 reload:
