smarter FAT cache by tracking evicted pages increase max net_recv length in riifs try and keep data pointer aligned for consecutive network reads
git-svn-id: svn://japaneatahand.com/rawksd/trunk@69 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/filemodule/Makefile
+++ b/filemodule/Makefile
@@ -113,7 +113,7 @@ $(OUTPUT).elf: $(TARGET).elf
 	@$(STRIPIOS) $< $@
 	@cp -f $@ ../../launcher/data/$(TARGET).dat
 	
-%.elf: $(OFILES)
+%.elf: $(OFILES) $(LIBS)
 	@echo linking $(notdir $@)
 	@$(LD) -g -o $@ $(OFILES) $(LDFLAGS) $(STYLEFIX)
 	
