misc. cosmetics crap
git-svn-id: svn://japaneatahand.com/rawksd/trunk@73 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/libios/Makefile
+++ b/libios/Makefile
@@ -78,8 +78,7 @@ INCLUDE	:=			$(foreach dir,$(INCLUDES),-I$(ROOT)/$(dir)) \
 ARCH	=	-mcpu=arm926ej-s -mtune=arm926ej-s -mthumb -mthumb-interwork -mbig-endian
 
 CFLAGS	=	-g $(ARCH) $(INCLUDE) -fno-strict-aliasing -Wall -O2 -fomit-frame-pointer -ffast-math -fverbose-asm \
-			-Wpointer-arith -Winline -Wundef -g -ffunction-sections -fdata-sections -fno-exceptions \
-			-DHAVE_CONFIG_H
+			-Wpointer-arith -Winline -Wundef -g -ffunction-sections -fdata-sections -fno-exceptions
 
 CPPFLAGS	=	-g $(ARCH) $(INCLUDE) -fno-strict-aliasing -Wall -O2 -fomit-frame-pointer -ffast-math -fverbose-asm \
 			-Wpointer-arith -Winline -Wundef -g -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti
