Kamek: Leaderboard improvements (now sends song name and artist) Added Splash and DLC hacks to Kamek; supports RawkSD DLC without an installer now.
git-svn-id: svn://japaneatahand.com/rawksd/trunk@92 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/rawksd/kamek/Makefile
+++ b/rawksd/kamek/Makefile
@@ -1,2 +1,5 @@
 all:
 	python kamek.py project.yaml
+	head -n 16 mount/riivolution/test.template > mount/riivolution/test.xml
+	cat build/ntsc_riiv.xml >> mount/riivolution/test.xml
+	tail -n 2 mount/riivolution/test.template >> mount/riivolution/test.xml
