--- a/rawksd/kamek/kamek_configs.yaml
+++ b/rawksd/kamek/kamek_configs.yaml
@@ -1,8 +1,8 @@
 ---
 -   friendly_name: "Rock Band 2 NTSC"
     short_name: 'ntsc'
-    defines: [REGION_NTSC, GECKO, HW_RVL]
-    includes: ["include"]
+    defines: [REGION_NTSC, DEBUG_DISABLED, GEKKO, HW_RVL]
+    includes: ["include", "../../filemodule/include"]
     linker_script: kamek_ntsc.x
     rel_area_start: 0x00000000
     rel_area_end: 0x00000000
