--- a/rawksd/kamek/project.yaml
+++ b/rawksd/kamek/project.yaml
@@ -1,3 +1,3 @@
 ---
-output_dir: "ASM"
-modules: [leaderboard.yaml, test.yaml]
+output_dir: "build"
+modules: [init.yaml, leaderboard.yaml, dlc.yaml, hacks.yaml]
