Kamek RB2 PAL project and symbols added (still missing hook/patch addresses in the .yaml files)
git-svn-id: svn://japaneatahand.com/rawksd/trunk@93 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/rawksd/kamek/Makefile
+++ b/rawksd/kamek/Makefile
@@ -1,5 +1,6 @@
 all:
 	python kamek.py project.yaml
-	head -n 16 mount/riivolution/test.template > mount/riivolution/test.xml
-	cat build/ntsc_riiv.xml >> mount/riivolution/test.xml
-	tail -n 2 mount/riivolution/test.template >> mount/riivolution/test.xml
+#	head -n 16 mount/riivolution/test.template > mount/riivolution/test.xml
+#	cat build/ntsc_riiv.xml >> mount/riivolution/test.xml
+#	tail -n 2 mount/riivolution/test.template >> mount/riivolution/test.xml
+
