add missing hook/patch addresses in the .yaml files
git-svn-id: svn://japaneatahand.com/rawksd/trunk@94 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/rawksd/kamek/dlc.yaml
+++ b/rawksd/kamek/dlc.yaml
@@ -5,20 +5,20 @@ hooks:
     type:           branch_insn
     branch_type:    bl
     src_addr_ntsc:  0x804B4FE8
-    src_addr_pal:   0x00000000
+    src_addr_pal:   0x804B61B4
     target_func:    'WiiContentMgrHook'
 
 -   name:           'WiiContentMgr::PollContentListDownload'
     type:           branch_insn
     branch_type:    bl
     src_addr_ntsc:  0x804B840C
-    src_addr_pal:   0x00000000
+    src_addr_pal:   0x804B981C
     target_func:    'WiiContentMgrHook'
 
 -   name:           'WiiContentMgr::Init'
     type:           branch_insn
     branch_type:    bl
     src_addr_ntsc:  0x804B47B4
-    src_addr_pal:   0x00000000
+    src_addr_pal:   0x804B5970
     target_func:    'WiiContentMgrInitHook'
 
