--- a/rawksd/kamek/init.yaml
+++ b/rawksd/kamek/init.yaml
@@ -5,5 +5,5 @@ hooks:
     type:           branch_insn
     branch_type:    bl
     src_addr_ntsc:  0x8000F5F0
-    src_addr_pal:   0x00000000
+    src_addr_pal:   0x8000F5B8
     target_func:    'Initialise'
