Added cRB? haxx to emu and Kamek PAL Kamek is broken agian due to missing symbols.
git-svn-id: svn://japaneatahand.com/rawksd/trunk@99 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/rawksd/kamek/Makefile
+++ b/rawksd/kamek/Makefile
@@ -1,6 +1,12 @@
 all:
 	python kamek.py project.yaml
-#	head -n 16 mount/riivolution/test.template > mount/riivolution/test.xml
-#	cat build/ntsc_riiv.xml >> mount/riivolution/test.xml
-#	tail -n 2 mount/riivolution/test.template >> mount/riivolution/test.xml
+	@echo "Creating XML..."
+	@cat riiv.template > riiv.xml
+	@echo '<patch id="test_ntsc">' >> riiv.xml
+	@cat build/ntsc_riiv.xml >> riiv.xml
+	@echo '</patch>' >> riiv.xml
+	@echo '<patch id="test_pal">' >> riiv.xml
+	@cat build/pal_riiv.xml >> riiv.xml
+	@echo '</patch>' >> riiv.xml
+	@echo '</wiidisc>' >> riiv.xml
 
