--- a/rawksd/kamek/kamek_configs.yaml
+++ b/rawksd/kamek/kamek_configs.yaml
@@ -1,16 +1,18 @@
 ---
 -   friendly_name: "Rock Band 2 NTSC"
     short_name: 'ntsc'
-    defines: [REGION_NTSC, DEBUG, GEKKO, HW_RVL]
+    defines: [REGION_NTSC, DEBUGD, GEKKO, HW_RVL]
     includes: ["include", "../../filemodule/include"]
+    address: '0x80001800'
     linker_script: kamek_ntsc.x
     rel_area_start: 0x00000000
     rel_area_end: 0x00000000
   
 -   friendly_name: "Rock Band 2 PAL"
     short_name: 'pal'
-    defines: [REGION_PAL, DEBUG, GEKKO, HW_RVL]
+    defines: [REGION_PAL, DEBUGD, GEKKO, HW_RVL]
     includes: ["include", "../../filemodule/include"]
+    address: '0x80001800'
     linker_script: kamek_pal.x
     rel_area_start: 0x00000000
     rel_area_end: 0x00000000
