--- a/rawksd/kamek/leaderboard.yaml
+++ b/rawksd/kamek/leaderboard.yaml
@@ -1,5 +1,5 @@
 ---
-source_files: [leaderboard.cpp, network_common.c]
+source_files: [leaderboard.cpp]
 hooks:
 -   name:           'Solo Leaderboard Hack'
     type:           branch_insn
