RawkSD PC Update Commit See the TODO list for everything that's done, way too much for me to reiterate. Let's just say it tends to work now.
git-svn-id: svn://japaneatahand.com/rawksd/trunk@109 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/consolehaxx/ConsoleHaxx.RawkSD.SWF/ConsoleHaxx.RawkSD.SWF.csproj
+++ b/consolehaxx/ConsoleHaxx.RawkSD.SWF/ConsoleHaxx.RawkSD.SWF.csproj
@@ -49,6 +49,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>ConsoleHaxx.RawkSD.SWF.Program</StartupObject>
@@ -87,6 +88,12 @@
       <DependentUpon>ChartForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Configuration.cs" />
+    <Compile Include="DeleteForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DeleteForm.Designer.cs">
+      <DependentUpon>DeleteForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="EditForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -124,6 +131,9 @@
     <EmbeddedResource Include="ChartForm.resx">
       <DependentUpon>ChartForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="DeleteForm.resx">
+      <DependentUpon>DeleteForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="EditForm.resx">
       <DependentUpon>EditForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -146,6 +156,9 @@
     <Compile Include="MainForm.Progress.cs">
       <SubType>Form</SubType>
     </Compile>
+    <EmbeddedResource Include="SettingsForm.resx">
+      <DependentUpon>SettingsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
