--- a/consolehaxx/ConsoleHaxx.Common/ConsoleHaxx.Common.csproj
+++ b/consolehaxx/ConsoleHaxx.Common/ConsoleHaxx.Common.csproj
@@ -31,6 +31,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -71,6 +72,7 @@
     <Compile Include="Midi.cs" />
     <Compile Include="MP3.cs" />
     <Compile Include="Multistream.cs" />
+    <Compile Include="MultiThreadStream.cs" />
     <Compile Include="Pair.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Substream.cs" />
