--- a/consolehaxx/ConsoleHaxx.RawkSD/ConsoleHaxx.RawkSD.csproj
+++ b/consolehaxx/ConsoleHaxx.RawkSD/ConsoleHaxx.RawkSD.csproj
@@ -49,6 +49,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="QueenBeeParser">
@@ -76,7 +77,7 @@
     <Compile Include="AudioFormats\AudioFormatOgg.cs" />
     <Compile Include="AudioFormats\AudioFormatRB2Bink.cs" />
     <Compile Include="AudioFormats\AudioFormatVGS.cs" />
-    <Compile Include="AudioFormats\AudioFormatWav.cs" />
+    <Compile Include="AudioFormats\AudioFormatRB2Mogg.cs" />
     <Compile Include="ChartFormats\ChartFormatChart.cs" />
     <Compile Include="ChartFormats\ChartFormatFsgMub.cs" />
     <Compile Include="ChartFormats\ChartFormatGH1.cs" />
@@ -120,6 +121,7 @@
     <Compile Include="RawkSquish.cs" />
     <Compile Include="Platforms\PlatformRB2WiiCustomDLC.cs" />
     <Compile Include="SongData.cs" />
+    <Compile Include="SongDataCache.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ConsoleHaxx.Common\ConsoleHaxx.Common.csproj">
