RawkSD PC Updates Better handling of folder opens, and arks Solos added to import data Automatic generation of weights and pan (broken atm; auto-plays talkies for you) RB2 360 DLC Exporting Preferences dialog Failed attempt at generating proper MOGG headers As usual, a bunch of other stuff I forgot to mention.
git-svn-id: svn://japaneatahand.com/rawksd/trunk@116 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/consolehaxx/ConsoleHaxx.RawkSD/ConsoleHaxx.RawkSD.csproj
+++ b/consolehaxx/ConsoleHaxx.RawkSD/ConsoleHaxx.RawkSD.csproj
@@ -170,16 +170,15 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\rawksd_000bin" />
     <None Include="Resources\rawksd_albumart" />
     <None Include="Resources\rawksd_milo" />
-    <None Include="Resources\rawksd_pan" />
     <None Include="Resources\rawksd_savebanner" />
     <None Include="Resources\rawksd_tmd" />
-    <None Include="Resources\rawksd_weights" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
