Riivolution 1.03 Improved dol locator for channel installer.
git-svn-id: svn://japaneatahand.com/rawksd/trunk@141 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/launcher/Makefile
+++ b/launcher/Makefile
@@ -108,14 +108,11 @@ clean:
 
 #---------------------------------------------------------------------------------
 run: $(BUILD)
-	wiiload $(OUTPUT).dol
+	@wiiload $(OUTPUT).dol
 
 z: $(BUILD)
-	./dollz3/dollz3 $(OUTPUT).dol $(OUTPUT).z.dol
-
-#---------------------------------------------------------------------------------
-reload:
-	wiiload -r $(OUTPUT).dol
+	@./dollz3/dollz3 $(OUTPUT).dol $(OUTPUT).z.dol
+	@./hash $(OUTPUT).z.dol
 
 #---------------------------------------------------------------------------------
 else
