Riivolution 1.03 (for real this time) Readme updates Fix a bug that occurred when you have multiple RiiFS connections to the same server
git-svn-id: svn://japaneatahand.com/rawksd/trunk@143 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/launcher/Makefile
+++ b/launcher/Makefile
@@ -104,7 +104,7 @@ $(BUILD):
 #---------------------------------------------------------------------------------
 clean:
 	@echo clean ...
-	@rm -fr $(BUILD) $(OUTPUT).elf $(OUTPUT).dol
+	@rm -fr $(BUILD) $(OUTPUT).elf $(OUTPUT).dol $(OUTPUT).z.dol
 
 #---------------------------------------------------------------------------------
 run: $(BUILD)
