Minor kamek improvements
git-svn-id: svn://japaneatahand.com/rawksd/trunk@147 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/rawksd/kamek/hacks.yaml
+++ b/rawksd/kamek/hacks.yaml
@@ -1,6 +1,12 @@
 ---
 source_files: [hacks.cpp]
 hooks:
+-   name:       'Disable SD Card'
+    type:       patch
+    addr_ntsc:  0x8072E144
+    addr_pal:   0x8072FB5C
+    data:       '3860FFFF'
+
 -   name:       'Skip Wiimote Screen'
     type:       patch
     addr_ntsc:  0x8000C2D0
@@ -25,12 +31,12 @@ hooks:
 #    addr_pal:   0x80273638
 #    data:       '386000014E800020'
 
--   name:           'Heap::FreeBlockStats'
-    type:           branch_insn
-    branch_type:    b
-    src_addr_ntsc:  0x80504328
-    src_addr_pal:   0x80505d54
-    target_func:    'HeapFreeBlockStatsHook'
+#-   name:           'Heap::FreeBlockStats'
+#    type:           branch_insn
+#    branch_type:    b
+#    src_addr_ntsc:  0x80504328
+#    src_addr_pal:   0x80505d54
+#    target_func:    'HeapFreeBlockStatsHook'
 
 #-   name:       'Disable VerifyChecksum'
 #    type:       patch
